[package]
name = "ca-rs"
version = "0.1.0"
authors = ["Matt Stavola <matt@stavola.xyz>"]

[dependencies]
rocket = "0.2.2"
rocket_codegen = "0.2.2"

ws = "0.7.1"

regex = "0.2.1"
lazy_static = "0.2.8"

log = "0.3.7"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.redis]
version = "0.8.0"