[package]
name = "ca-rs"
version = "0.1.0"
authors = ["Matt Stavola"]
repository = "https://github.com/mbStavola/ca-rs"
license = "MIT"

[dependencies]
rocket = "0.2.7"
rocket_codegen = "0.2.7"

ws = "0.7.1"
redis = "0.8.0"

log = "0.3.7"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-redis = "0.7.0"