[package]
name = "ca-rs"
version = "0.1.0"
authors = ["Matt Stavola"]
repository = "https://github.com/mbStavola/ca-rs"
license = "MIT"

[dependencies]
rocket = "0.2.8"
rocket_codegen = "0.2.8"

ws = "0.7.3"
redis = "0.8.0"

log = "0.3.7"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-redis = "0.7.0"

[dependencies.rocket_contrib]
version = "0.2.8"
default-features = false
features = ["handlebars_templates"]